--- a/tiny_mrp/mrp/templates/mrp/purchase/updateReq_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/updateReq_v2.html
@@ -33,6 +33,33 @@
 </div>
 <div class="app-detail-article">
     <div class="card-body">
+        <div class="d-flex align-items-center p-l-r-0 m-b-20">
+            <div class="d-flex align-items-center">
+                <figure class="avatar avatar-sm m-r-15">
+                    <img src="{{company.user.profileImage.url}}" class="rounded-circle" alt="image">
+                </figure>
+                <div>
+                    <h6 class="m-b-0">
+                        <span class="text-primary">{{company.user}}</span>
+                        {% comment %} <span class="d-sm-inline d-none text-muted"> &lt;elnora@gmail.com&gt;</span> {% endcomment %}
+                    </h6>
+                    {% comment %} <span class="small text-muted">به مهرانا بخشنده</span> {% endcomment %}
+                </div>
+            </div>
+            <div class="ml-auto">
+                {% if files %}
+                <a href="#" data-toggle="tooltip" title="" class="mr-2" data-original-title="Attachment">
+                    <i class="fa fa-paperclip"></i>
+                </a>
+                {% endif %}
+                {% if company.is_emergency %}
+                <a href="#" class="mr-2">
+                    <i class="fa fa-star font-size-16 text-warning"></i>
+                </a>
+                {% endif %}
+                <span class="text-muted">{{company.get_dateCreated_jalali}}</span>
+            </div>
+        </div>
      {% include 'mrp/purchase/purchase_v2.html' %}
     
     </div>
