--- a/tiny_mrp/mrp/templates/mrp/purchase/purchase_request_bill.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchase_request_bill.html
@@ -44,7 +44,7 @@
 <div class="container">
     <!-- Header Section -->
     <div class="header">
-        <h1>فاکتور درخواست خرید</h1>
+        <h1>رسید درخواست خرید</h1>
         <p class="lead">اطلاعات درخواست خرید شماره {{ purchase_request.id }}</p>
     </div>
 
