--- a/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList_v2.html
@@ -54,13 +54,7 @@
                                                 </div>
                                             </li>
                                             {% endif %}
-                                            {% if i|has_comment_by_user:request.user.sysuser %}
-                                            <li class="list-inline-item mb-0">
-                                                <a href="#" data-toggle="tooltip" title="" data-original-title="{{i|get_comment_by_user:request.user.sysuser}}">
-                                                    <i class="fa fa-file"></i>
-                                                </a>
-                                            </li>
-                                            {% endif %}
+                                           
                                             <li class="list-inline-item mb-0">
                                                 <a href="#" data-toggle="tooltip" title="" data-original-title="وضعیت">
                                                   {{i.get_status_display}}
@@ -82,7 +76,39 @@
                                         </ul>
                                     </div>
                                 </div>
-                                
+                                 <div class="text-muted d-flex justify-content-between">
+                                    <div class="text-truncate small"></div>
+                                    <div class="text-nowrap pl-3">
+                                        <ul class="list-inline">
+                                            {% if i.has_comment %}
+                                            <div class="mr-3 d-sm-inline d-none">
+                                                <div class="avatar-group">
+                                                   
+                                                    {% for comment in i.get_comment %}
+                                                   
+                                                    <figure class="avatar avatar-sm" title="" data-toggle="tooltip" data-original-title="{{comment.content}}">
+                                                        <img src="{{comment.user.profileImage.url}}" class="rounded-circle" alt="image">
+                                                    </figure>
+                                                    {% endfor %}
+                                                    
+                                                </div>
+                                            </div>
+                                            {% endif %}
+                                           
+                                            {% if i|has_comment_by_user:request.user.sysuser %}
+                                            <li class="list-inline-item mb-0">
+                                                <a href="#" data-toggle="tooltip" title="" data-original-title="{{i|get_comment_by_user:request.user.sysuser}}">
+                                                    <i class="fa fa-file"></i>
+                                                </a>
+                                            </li>
+                                            {% endif %}
+                                            
+                                           
+                                           
+                                           
+                                        </ul>
+                                    </div>
+                                </div>
                             </div>
                         </li>
                         {% endfor %}
