--- a/tiny_mrp/mrp/templates/mrp/purchase/updateReq_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/updateReq_v2.html
@@ -6,7 +6,7 @@
             <i data-feather="arrow-left" class="mr-3"></i>
         </a>
         <h5 class="mb-0">
-            درخواست
+            درخواست شماره {{company.id}}
             <span class="badge bg-warning badge-pill ml-1 badge_status">{{company.get_status_display}}</span>
         </h5>
     </div>
