--- a/tiny_mrp/mrp/templates/mrp/registration/login.html
+++ b/tiny_mrp/mrp/templates/mrp/registration/login.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>دیانا سیستم مدیریت تولید سرو رایان</title>
+    <title>دیانا سیستم مدیریت تولید و درخواست سرو رایان</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="{% static 'assets/media/image/favicon.png' %}"/>
@@ -55,7 +55,7 @@
         </div>
         <button class="btn btn-primary btn-block">ورود</button>
         <hr>
-        <p class="m-t"> <small>کلیه حقوق محفوظ است</strong> 1393-1395 &copy; <a href="http://www.sarvrayan.ir" target="_blank">سرو رایان</a></small> </p>
+        <p class="m-t"> <small>کلیه حقوق محفوظ است</strong> 1397-1403 &copy; <a href="http://www.sarvrayan.ir" target="_blank">سرو رایان</a></small> </p>
         <hr>
         <p class="text-muted">اکانت ندارید?</p>
         <a href="register.html" class="btn btn-outline-light btn-sm">ثبت نام کنید!</a>
