--- a/tiny_mrp/mrp/templates/mrp/temp2.html
+++ b/tiny_mrp/mrp/templates/mrp/temp2.html
@@ -102,7 +102,7 @@
         <!-- begin::footer -->
         <footer>
             <div class="container-fluid">
-              <div>© 1402 |سیستم مدیریت تولید دیانا <a href="https://sarvrayan.ir">سرو رایان</a></div>
+              <div>© 1402 |سیستم مدیریت تولید و درخواست دیانا <a href="https://sarvrayan.ir">سرو رایان</a></div>
       
              
           </footer>
