--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -149,7 +149,7 @@
     <!-- begin::footer -->
     <footer>
       <div class="container-fluid d-print-none">
-        <div>© 1402 |سیستم مدیریت تولید دیانا <a href="https://sarvrayan.ir">سرو رایان</a></div>
+        <div>© 1402 |سیستم مدیریت تولید و درخواست دیانا <a href="https://sarvrayan.ir">سرو رایان</a></div>
 
      
     </footer>
