--- a/tiny_mrp/mrp/templates/mrp/purchase/purchase_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchase_v2.html
@@ -12,7 +12,7 @@
                 <div class="table-responsive" tabindex="1" style="overflow: hidden; outline: none;">
                     <table class="table  table-bordered">
                         <thead>
-                            <tr>
+                            <tr  class="bg-dark">
                                 <th>نام کالا</th>
                                 <th>تعداد</th>
                                 <th>قسمت مورد مصرف</th>
