--- a/tiny_mrp/mrp/templates/mrp/purchase_planningboard/list.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase_planningboard/list.html
@@ -3,6 +3,8 @@
 
 
 {% endblock %} {% endcomment %}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +13,9 @@
     <title>Purchase Planning Board</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" rel="stylesheet">
+    
+    <!-- DataTable -->
+    <link rel="stylesheet" href="{% static 'vendors/dataTable/dataTables.min.css' %}" type="text/css">
 </head>
 <body>
     <div class="container my-5">
@@ -19,6 +24,7 @@
             <thead>
                 <tr class="bg-black">
                     <th>Select</th>
+                    
                     <th>Item Name</th>
                     <th>Requested Quantity</th>
                     <th>Supplier</th>
@@ -52,8 +58,17 @@
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+    <!-- DataTable -->
+    <script src="{% static 'vendors/dataTable/jquery.dataTables.min.js' %}"></script>
+    <script src="{% static 'vendors/dataTable/dataTables.bootstrap4.min.js' %}"></script>
+    <script src="{% static 'vendors/dataTable/dataTables.responsive.min.js' %}"></script>
+    <script src="{% static 'assets/js/examples/datatable.js' %}"></script>
     <script>
         $(document).ready(function () {
+            $('#request-items-table').DataTable({
+                "scrollY": "400px",
+                "scrollCollapse": true
+            });
     const suppliers = ["Supplier 1", "Supplier 2", "Supplier 3"]; // Example supplier list
 
     // Enable Autocomplete for Supplier Selection
@@ -163,6 +178,11 @@
 
         // Reapply Autocomplete to new row
         $('.supplier-autocomplete').autocomplete({ source: suppliers });
+        $('#request-items-table').DataTable().destroy();
+        $('#request-items-table').DataTable({
+            "scrollY": "400px",
+            "scrollCollapse": true
+        });
     });
 
     // Assign Selected Items Button Logic
