--- a/tiny_mrp/mrp/templates/mrp/purchase_planningboard/list.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase_planningboard/list.html
@@ -24,7 +24,7 @@
                     {% comment %} <th>Supplied Quantity</th>
                     <th>Price</th> {% endcomment %}
                     <th>Action</th>
-                </tr>
+                </tr>dsds
                 <tr>
                     <th></th>
                     <th><input type="text" class="form-control form-control-sm column-search" placeholder="Search Purchase ID"></th>
