--- a/tiny_mrp/mrp/templates/mrp/purchase/updateReq_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/updateReq_v2.html
@@ -43,10 +43,10 @@
             <i data-feather="check-circle"></i>
         </a>
         {% endif %}
-            <a href="#" class="btn btn-outline-light ml-2 rejected" data-url="{% url 'reject_request' company.id %}" data-toggle="tooltip"
+            {% comment %} <a href="#" class="btn btn-outline-light ml-2 rejected" data-url="{% url 'reject_request' company.id %}" data-toggle="tooltip"
                title="رد کردن">
                 <i data-feather="trash"></i>
-            </a>
+            </a> {% endcomment %}
         </div>
     </div>
 </div>
@@ -82,7 +82,55 @@
      {% include 'mrp/purchase/purchase_v2.html' %}
     
     </div>
+    {% if perms.mrp.can_view_faktors and faktors %}
     <hr class="m-0">
+    <div class="card-body">
+        <h6 class="mb-3 font-size-11 text-uppercase">مدارک پیوست شده</h6>
+        <ul class="list-unstyled mb-0">
+            {% for i in faktors %}
+            <li class="small">
+                <a href="{{i.file.url}}" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-paperclip mr-1 width-15 height-15"><path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path></svg>
+                    {{i}}
+                </a>
+            </li>
+            {% endfor %}
+           
+        </ul>
+    </div>
+    {% endif %}
+    {% if perms.mrp.can_upload_faktors %}
+    <hr class="m-0">
+    <div class="card-body">
+        <form id="faktor-upload-form" method="post" enctype="multipart/form-data">
+            <div id="faktor-container" class="mb-3">
+              <!-- Dynamic image input fields will be added here -->
+            </div>
+            <div class="d-flex justify-content-center align-items-center">
+              <button type="button" id="add-faktor-btn" class="btn btn-secondary">
+                <i class="fas fa-plus mr-2"></i>افزودن مدرک
+              </button>
+              
+              
+            
+            </div>
+          </form>
+    </div>
+    {% endif %}
+    {% if perms.mrp.can_create_paraf %}
+    <hr class="m-0">
+    <div class="card-body">
+        <h6 class="mb-3 font-size-11 text-uppercase">نظر مدیریت</h6>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">{{company.manager_comment}}</textarea>
+    </div>
+    {% endif %}
+    {% if perms.mrp.can_view_paraf and company.manager_comment %}
+    <hr class="m-0">
+    <div class="card-body">
+        <h6 class="mb-3 font-size-11 text-uppercase">نظر مدیریت</h6>
+       <p>{{company.manager_comment}}</p>
+    </div>
+    {% endif %}
     
     {% comment %} {% include 'mrp/purchase/tab_updatereq_v2.html' %} {% endcomment %}
 
